updated readme and removed extra keywords

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "Do painless migration."
 homepage = "https://github.com/ffimnsr/midas"
 repository = "https://github.com/ffimnsr/midas"
 license = "MIT"
-keywords = ["migrations", "database", "postgres", "migrate", "cli", "tool", "utilities"]
+keywords = ["migrations", "database", "postgres", "migrate", "cli"]
 
 [dependencies]
 clap = "2.33"
