--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,13 +58,13 @@ jobs:
             target: s390x-unknown-linux-gnu
           - build: macos
             os: macos-latest
-            rust: nightly
+            rust: stable
           - build: win-msvc
             os: windows-2022
-            rust: nightly
+            rust: stable
           - build: win-gnu
             os: windows-2022
-            rust: nightly-x86_64-gnu
+            rust: stable-x86_64-gnu
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
@@ -93,6 +93,9 @@ jobs:
       - name: Run tests
         if: matrix.target != ''
         run: ${{ env.CARGO }} test --verbose ${{ env.TARGET_FLAGS }}
+      - name: Run tests (with cross)
+        if: matrix.target != ''
+        run: ${{ env.CARGO }} test --verbose ${{ env.TARGET_FLAGS }}
   rustfmt:
     runs-on: ubuntu-latest
     steps:
@@ -100,7 +103,7 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: ${{ matrix.rust }}
-          target: ${{ matrix.target }}
+          toolchain: stable
+          components: rustfmt
       - name: Check formatting
         run: cargo fmt --all --check
