--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,12 +59,12 @@ jobs:
           - build: macos
             os: macos-latest
             rust: stable
-          - build: win-msvc
-            os: windows-2022
-            rust: stable
-          - build: win-gnu
-            os: windows-2022
-            rust: stable-x86_64-gnu
+          # - build: win-msvc
+          #   os: windows-2022
+          #   rust: stable
+          # - build: win-gnu
+          #   os: windows-2022
+          #   rust: stable-x86_64-gnu
     steps:
       - uses: actions/checkout@v4
       - name: Install Rust
