--- a/.github/workflows/build-push-release.yaml
+++ b/.github/workflows/build-push-release.yaml
@@ -99,7 +99,7 @@ jobs:
           echo "target flag is: ${{ env.TARGET_FLAGS }}"
           echo "target dir is: ${{ env.TARGET_DIR }}"
       - name: Build release binary and dependency crates
-        run: ${{ env.CARGO }} build --verbose ${{ env.TARGET_FLAGS }}
+        run: ${{ env.CARGO }} build --verbose --release ${{ env.TARGET_FLAGS }}
       - name: Strip release binary (linux, macos and macos-arm)
         if: matrix.build == 'linux' || matrix.os == 'macos'
         run: |
@@ -150,8 +150,7 @@ jobs:
   # build-release-image:
   #   runs-on: ubuntu-latest
   #   needs:
-  #     - check-release
-  #     - create-release
+  #     - build-release-package
   #   permissions:
   #     contents: read
   #     packages: write
