--- a/.github/workflows/build-push-release.yaml
+++ b/.github/workflows/build-push-release.yaml
@@ -146,56 +146,55 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: gh release upload ${{ needs.create-release.outputs.midas_version }} ${{ env.ASSET }} ${{ env.ASSET_SUM }}
-
-  # build-release-image:
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - build-release-package
-  #   permissions:
-  #     contents: read
-  #     packages: write
-  #     id-token: write
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - name: Install cosign
-  #       if: github.event_name != 'pull_request'
-  #       uses: sigstore/cosign-installer@v3.1.1
-  #       with:
-  #         cosign-release: 'v2.1.1'
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3.0.0
-  #     - name: Log into registry ${{ env.REGISTRY }}
-  #       if: github.event_name != 'pull_request'
-  #       uses: docker/login-action@v3.0.0
-  #       with:
-  #         registry: ${{ env.REGISTRY }}
-  #         username: ${{ github.actor }}
-  #         password: ${{ secrets.GITHUB_TOKEN }}
-  #     - name: Extract Docker metadata
-  #       id: meta
-  #       uses: docker/metadata-action@v5.0.0
-  #       with:
-  #         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-  #         tags: |
-  #           type=raw,value=latest
-  #           type=semver,pattern={{version}},value=${{ env.MIDAS_VERSION }}
-  #           type=semver,pattern={{major}}.{{minor}},value=${{ env.MIDAS_VERSION }}
-  #           type=semver,pattern={{major}},value=${{ env.MIDAS_VERSION }}
-  #     - name: Build and push Docker image
-  #       id: build-and-push
-  #       uses: docker/build-push-action@v5.0.0
-  #       with:
-  #         context: .
-  #         file: ./Containerfile
-  #         platforms: linux/amd64, linux/arm64
-  #         push: ${{ github.event_name != 'pull_request' }}
-  #         tags: ${{ steps.meta.outputs.tags }}
-  #         labels: ${{ steps.meta.outputs.labels }}
-  #         cache-from: type=gha
-  #         cache-to: type=gha,mode=max
-  #     - name: Sign the published Docker image
-  #       if: ${{ github.event_name != 'pull_request' }}
-  #       env:
-  #         TAGS: ${{ steps.meta.outputs.tags }}
-  #         DIGEST: ${{ steps.build-and-push.outputs.digest }}
-  #       run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
+  build-release-image:
+    runs-on: ubuntu-latest
+    needs:
+      - build-release-package
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install cosign
+        if: github.event_name != 'pull_request'
+        uses: sigstore/cosign-installer@v3.1.1
+        with:
+          cosign-release: 'v2.1.1'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3.0.0
+      - name: Log into registry ${{ env.REGISTRY }}
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5.0.0
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=latest
+            type=semver,pattern={{version}},value=${{ env.MIDAS_VERSION }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ env.MIDAS_VERSION }}
+            type=semver,pattern={{major}},value=${{ env.MIDAS_VERSION }}
+      - name: Build and push Docker image
+        id: build-and-push
+        uses: docker/build-push-action@v5.0.0
+        with:
+          context: .
+          file: ./Containerfile
+          platforms: linux/amd64, linux/arm64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      - name: Sign the published Docker image
+        if: ${{ github.event_name != 'pull_request' }}
+        env:
+          TAGS: ${{ steps.meta.outputs.tags }}
+          DIGEST: ${{ steps.build-and-push.outputs.digest }}
+        run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
