--- a/.github/workflows/build-push-release.yaml
+++ b/.github/workflows/build-push-release.yaml
@@ -98,6 +98,14 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           ci/ubuntu-install-packages
+      - name: Install packages (Windows GNU)
+        uses: msys2/setup-msys2@v2
+        if: matrix.os == 'windows-latest' && matrix.target == 'x86_64-pc-windows-gnu'
+        with:
+          msystem: UCRT64
+          update: true
+          install: git perl pkg-config mingw-w64-x86_64-toolchain mingw-w64-ucrt-x86_64-gcc openssl
+          path-type: inherit
       - name: Install Rust
         uses: dtolnay/rust-toolchain@master
         with:
@@ -115,7 +123,15 @@ jobs:
           echo "cargo command is: ${{ env.CARGO }}"
           echo "target flag is: ${{ env.TARGET_FLAGS }}"
           echo "target dir is: ${{ env.TARGET_DIR }}"
-      - name: Build release binary and dependency crates
+      - name: Build release binary and dependency crates (native)
+        if: matrix.target == ''
+        run: ${{ env.CARGO }} build --verbose --release ${{ env.TARGET_FLAGS }}
+      - name: Build release binary and dependency crates (cross)
+        if: matrix.target != 'x86_64-pc-windows-gnu'
+        run: ${{ env.CARGO }} build --verbose --release ${{ env.TARGET_FLAGS }}
+      - name: Build release binary and dependency crates (win-gnu)
+        if: matrix.target == 'x86_64-pc-windows-gnu'
+        shell: msys2 {0}
         run: ${{ env.CARGO }} build --verbose --release ${{ env.TARGET_FLAGS }}
       - name: Strip release binary (linux, macos and macos-arm)
         if: matrix.build == 'linux' || matrix.os == 'macos'
@@ -164,6 +180,55 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         shell: bash
         run: gh release upload ${{ needs.create-release.outputs.midas_version }} ${{ env.ASSET }} ${{ env.ASSET_SUM }}
+  build-release-deb:
+    runs-on: ubuntu-latest
+    needs:
+      - create-release
+    env:
+      CARGO: cargo
+      TARGET: x86_64-unknown-linux-musl
+      TARGET_FLAGS: ""
+      TARGET_DIR: ./target
+      RUST_BACKTRACE: 1
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install packages (Ubuntu)
+        run: |
+          ci/ubuntu-install-packages
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          target: ${{ env.TARGET }}
+      - name: Install cargo-deb
+        shell: bash
+        run: cargo install cargo-deb
+      - name: Show command used for Cargo
+        run: |
+          echo "cargo command is: ${{ env.CARGO }}"
+          echo "target flag is: ${{ env.TARGET_FLAGS }}"
+          echo "target dir is: ${{ env.TARGET_DIR }}"
+      - name: Build release binary
+        run: ${{ env.CARGO }} build --verbose --release --target ${{ env.TARGET }} ${{ env.TARGET_FLAGS }}
+      - name: Strip release binary
+        run: |
+          strip "target/${{ env.TARGET }}/release/midas"
+          strip "target/${{ env.TARGET }}/release/cargo-migrate"
+      - name: Build deb package
+        run: ${{ env.CARGO }} deb --release --target ${{ env.TARGET }}
+      - name: Build archive
+        shell: bash
+        run: |
+          deb_target="midas_${{ needs.create-release.outputs.midas_version }}-1_amd64.deb"
+          mv "target/debian/$deb_target" .
+          shasum -a 256 "$deb_target" > "$deb_target.sha256"
+          echo "ASSET=$deb_target" >> $GITHUB_ENV
+          echo "ASSET_SUM=$deb_target.sha256" >> $GITHUB_ENV
+      - name: Upload release archive
+        env:
+          GH_TOKEN: ${{ github.token }}
+        shell: bash
+        run: gh release upload ${{ needs.create-release.outputs.midas_version }} ${{ env.ASSET }} ${{ env.ASSET_SUM }}
   build-release-image:
     runs-on: ubuntu-latest
     needs:
@@ -179,21 +244,21 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install cosign
         if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@v3.1.1
+        uses: sigstore/cosign-installer@v3.6.0
         with:
-          cosign-release: 'v2.1.1'
+          cosign-release: 'v2.4.0'
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.0.0
+        uses: docker/setup-buildx-action@v3
       - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3.0.0
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Extract Docker metadata
         id: meta
-        uses: docker/metadata-action@v5.0.0
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
@@ -203,7 +268,7 @@ jobs:
             type=semver,pattern={{major}},value=${{ env.MIDAS_VERSION }}
       - name: Build and push Docker image
         id: build-and-push
-        uses: docker/build-push-action@v5.0.0
+        uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Containerfile
