--- a/.github/workflows/build-push-release.yaml
+++ b/.github/workflows/build-push-release.yaml
@@ -69,14 +69,51 @@ jobs:
           - win-gnu
           - win32-msvc
         include:
-          - build: linux
+          - build: stable-musl
             os: ubuntu-latest
             rust: stable
             target: x86_64-unknown-linux-musl
-          - build: linux-arm
+            strip: x86_64-linux-musl-strip
+          - build: stable-x86
+            os: ubuntu-latest
+            rust: stable
+            target: i686-unknown-linux-gnu
+            strip: x86_64-linux-gnu-strip
+          - build: stable-arm-gnueabihf
             os: ubuntu-latest
             rust: stable
             target: arm-unknown-linux-gnueabihf
+            strip: arm-linux-gnueabihf-strip
+          - build: stable-armv7-gnueabihf
+            os: ubuntu-latest
+            rust: stable
+            target: armv7-unknown-linux-gnueabihf
+            strip: arm-linux-gnueabihf-strip
+          - build: stable-armv7-musleabihf
+            os: ubuntu-latest
+            rust: stable
+            target: armv7-unknown-linux-musleabihf
+            strip: arm-linux-musleabihf-strip
+          - build: stable-armv7-musleabi
+            os: ubuntu-latest
+            rust: stable
+            target: armv7-unknown-linux-musleabi
+            strip: arm-linux-musleabi-strip
+          - build: stable-aarch64
+            os: ubuntu-latest
+            rust: stable
+            target: aarch64-unknown-linux-gnu
+            strip: aarch64-linux-gnu-strip
+          - build: stable-powerpc64
+            os: ubuntu-latest
+            rust: stable
+            target: powerpc64-unknown-linux-gnu
+            strip: powerpc64-linux-gnu-strip
+          - build: stable-s390x
+            os: ubuntu-latest
+            rust: stable
+            target: s390x-unknown-linux-gnu
+            strip: s390x-linux-gnu-strip
           - build: macos
             os: macos-latest
             rust: nightly
@@ -144,7 +181,7 @@ jobs:
         shell: msys2 {0}
         run: ${{ env.CARGO }} build --verbose --release ${{ env.TARGET_FLAGS }}
       - name: Strip release binary (linux, macos and macos-arm)
-        if: matrix.build == 'linux' || matrix.os == 'macos'
+        if: matrix.os == 'macos'
         run: |
           strip "target/${{ matrix.target }}/release/midas"
           strip "target/${{ matrix.target }}/release/cargo-migrate"
@@ -153,13 +190,13 @@ jobs:
         run: |
           docker run --rm -v \
             "$PWD/target:/target:Z" \
-            ghcr.io/cross-rs/${{ matrix.target }}:edge \
-            ${{ matrix.target }}-strip \
+            ghcr.io/cross-rs/${{ matrix.target }}:main \
+            ${{ matrix.strip }} \
             /target/${{ matrix.target }}/release/midas
           docker run --rm -v \
             "$PWD/target:/target:Z" \
-            ghcr.io/cross-rs/${{ matrix.target }}:edge \
-            ${{ matrix.target }}-strip \
+            ghcr.io/cross-rs/${{ matrix.target }}:main \
+            ${{ matrix.strip }} \
             /target/${{ matrix.target }}/release/cargo-migrate
       - name: Build archive
         shell: bash
@@ -238,7 +275,7 @@ jobs:
   build-release-image:
     runs-on: ubuntu-latest
     needs:
-      - build-release-package
+      - create-release
     env:
       REGISTRY: ghcr.io
       IMAGE_NAME: ${{ github.repository }}
