🍕 Update ci workflow
Signed-off-by: Edward Fitz Abucay <ffimnsr@gmail.com>

--- a/.github/workflows/build-push-release.yaml
+++ b/.github/workflows/build-push-release.yaml
@@ -275,7 +275,7 @@ jobs:
   build-release-image:
     runs-on: ubuntu-latest
     needs:
-      - create-release
+      - build-release-package
     env:
       REGISTRY: ghcr.io
       IMAGE_NAME: ${{ github.repository }}
