🍕 Add new changes to QoL and UI output
Signed-off-by: Edward Fitz Abucay <ffimnsr@gmail.com>

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,2 +1,15 @@
-max_width = 79
-use_small_heuristics = "Max"
+edition = "2021"
+fn_params_layout = "Tall"
+hard_tabs = false
+match_block_trailing_comma = true
+max_width = 110
+merge_derives = true
+newline_style = "Unix"
+remove_nested_parens = true
+reorder_imports = true
+reorder_modules = true
+tab_spaces = 2
+use_field_init_shorthand = true
+use_small_heuristics = "Default"
+imports_layout = "Vertical"
+imports_granularity = "Module"
