--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 RUST_LOG=info
-DATABASE_URL=postgres://postgres:mysecretpassword@localhost:5432/test_migration
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/test_migration
+MIGRATIONS_ROOT=sample_migrations
