--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "midas"
-version = "0.7.1"
+version = "0.7.2"
 authors = ["Edward Fitz Abucay <gh:@ffimnsr>"]
 edition = "2021"
 readme = "README.md"
@@ -43,11 +43,10 @@ prettytable-rs = "0.10.0"
 thiserror = "2.0.3"
 anyhow = "1.0.93"
 indicatif = "0.17.9"
-indicatif-log-bridge = "0.2.3"
-nom = "7.1.3"
 serde = { version = "1.0.215", features = ["derive"] }
 serde_yaml = "0.9.34"
 rand = "0.8.5"
+console = "0.15.10"
 
 [dev-dependencies]
 tempfile = "3.12"
