--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "midas"
-version = "0.7.2"
+version = "0.7.3"
 authors = ["Edward Fitz Abucay <gh:@ffimnsr>"]
 edition = "2021"
 readme = "README.md"
@@ -25,7 +25,7 @@ name = "cargo-migrate"
 path = "src/midas/bin/migrate_main.rs"
 
 [dependencies]
-clap = { version = "4.5", features = ["string"] }
+clap = { version = "4.5", features = ["env", "string"] }
 postgres = "0.19"
 mysql = "25.0"
 rusqlite = { version = "0.32", features = ["bundled"] }
@@ -40,7 +40,6 @@ url = "2.5"
 indoc = "2"
 openssl = { version = "0.10", features = ["vendored"] }
 prettytable-rs = "0.10.0"
-thiserror = "2.0.3"
 anyhow = "1.0.93"
 indicatif = "0.17.9"
 serde = { version = "1.0.215", features = ["derive"] }
