--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "midas"
-version = "0.7.5"
+version = "0.7.6"
 authors = ["Edward Fitz Abucay <gh:@ffimnsr>"]
 edition = "2021"
 readme = "README.md"
@@ -11,6 +11,7 @@ repository = "https://github.com/ffimnsr/midas"
 license = "MIT OR Apache-2.0"
 keywords = ["sql", "database", "command-line", "migrate", "cli"]
 exclude = [".gitignore"]
+default-run = "midas"
 
 [lib]
 name = "midas_core"
@@ -49,7 +50,11 @@ mk_ext_prettytable = { version = "0.11.0", default-features = false, features = 
 mk_ext_serde_yaml = { version = "0.10.0" }
 
 [dev-dependencies]
-tempfile = "3.12"
+assert_cmd = "2.0.16"
+assert_fs = "1.1.2"
+predicates = { version = "3.1.3", default-features = false, features = ["diff", "regex"] }
+snapbox = "0.6.21"
+trycmd = "0.15.8"
 
 [package.metadata.deb]
 name = "midas"
